--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -27,15 +27,14 @@ layout: base.liquid
                     data.
 
                 </div>
-                <div class="info-button"><a href="#">Stories</a></div>
+                <div class="info-button"><a href="stories/">Stories</a></div>
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
                     Select a historical map source and choose what features to display.
-
                 </div>
-                <div class="info-button"><a href="#">Explore</a></div>
+                <div class="info-button"><a href="stories/#s6-start">Explore</a></div>
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink">
