--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,7 @@ div.footer-bottom div.develop {
     background-size: cover;
     min-height: 30vw;
     align-items: center;
+    justify-content: center;
   }
   .quicklink-text {
     padding: 10%;
