added resources, template margin and padding fixes

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -39,7 +39,7 @@ layout: base.liquid
             <li><a class="overviewLink" href="#s-4" data-slideId="800">4<span>Villagers, Settlers</span></a></li>
             <li><a class="overviewLink" href="#s-5" data-slideId="900">5<span>Lines</span></a></li>
             <!--  -->
-            <li><a class="overviewLink" href="#s6-start" data-slideId="1000">Explore </a></li>
+            <li><a class="overviewLink" href="#s6-end" data-slideId="1000">Explore </a></li>
         </ol>
     </nav>
 
@@ -116,6 +116,7 @@ layout: base.liquid
 </div>
 
 <div id="filter-wrapper">
+    <a href="#s6-end"></a>
     <input type="checkbox" id="filter">
     <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
         <h2>Filter</h2>
