--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -2,7 +2,7 @@
 layout: base.liquid
 ---
 <section class="section">
-    <div class="container">
+    <div class="home-container">
         <div class="w3-row has-text-centered w3-padding-small home-hero">
             <div class="w3-col s3 m4 l4">&nbsp;</div>
             <div class="w3-col s6 m4 l4 info-box">
@@ -12,7 +12,7 @@ layout: base.liquid
                 complex story than popular history has hitherto told about colonial settlement among - and the Crown's
                 relations with - the powerful indigenous nations of the Iroquois Confederacy.
                 <br/>
-                <div class="info-button"><a href="#">GO TO MAP</a></div>
+                <div class="info-button"><a href="stories/">GO TO MAP</a></div>
             </div>
 
             <div class="content {{ tags }}">
@@ -34,7 +34,7 @@ layout: base.liquid
                 <div class="quicklink-text">
                     Select a historical map source and choose what features to display.
                 </div>
-                <div class="info-button"><a href="stories/#s6-start">Explore</a></div>
+                <div class="info-button"><a href="stories/#s6-end">Explore</a></div>
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink">
@@ -42,7 +42,7 @@ layout: base.liquid
                     Find out more about the themes and topics of M&CW with links to related websites and suggestions for further reading.
 
                 </div>
-                <div class="info-button"><a href="#">Resources</a></div>
+                <div class="info-button"><a href="resources/">Resources</a></div>
             </div>
 
         </div>
