--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -46,7 +46,8 @@ div.logo img {
 
 .quicklink {
   text-align: center;
-  background: #FFF;
+  background: rgb(18,77,32, 0.1);
+  padding-bottom: 5%;
   color: #000;
   font-family: "Playfair Display";
   font-size: 16px;
@@ -100,9 +101,10 @@ div.quicklink .info-button {
   color: #FFF;
 }
 
+// position: fixed;
 
 .footer {
-  position: fixed;
+  margin-top: 5%;
   bottom: 1;
 }
 
@@ -111,6 +113,9 @@ div.quicklink .info-button {
 }
 
 header {
+
+}
+div.home-container {
 
 }
 
@@ -150,6 +155,12 @@ div.footer-bottom div.develop {
 
 //tablets, large phones
 @media (min-width: 601px) and (max-width: 1200px) {
+
+  div.container {
+  max-width: 1200px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
   .home-hero {
     width: auto;
     background: url('../img/homepage-hero-900.jpg') lightgray -0.36px 0px / 100.056% 121.087% no-repeat;
@@ -161,7 +172,6 @@ div.footer-bottom div.develop {
 
   .quicklink {
     text-align: center;
-    background: #FFF;
     color: #000;
     font-family: "Playfair Display";
     font-size: 16px;
