--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,8 @@ div.logo img {
 
 .quicklink {
   text-align: center;
-  background: #FFF;
+  background: rgba(18, 77, 32, 0.1);
+  padding-bottom: 5%;
   color: #000;
   font-family: "Playfair Display";
   font-size: 16px;
@@ -95,7 +96,7 @@ div.quicklink .info-button {
 }
 
 .footer {
-  position: fixed;
+  margin-top: 5%;
   bottom: 1;
 }
 
@@ -135,6 +136,11 @@ div.footer-bottom div.develop {
   }
 }
 @media (min-width: 601px) and (max-width: 1200px) {
+  div.container {
+    max-width: 1200px;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
   .home-hero {
     width: auto;
     background: url("../img/homepage-hero-900.jpg") lightgray -0.36px 0px/100.056% 121.087% no-repeat;
@@ -145,7 +151,6 @@ div.footer-bottom div.develop {
   }
   .quicklink {
     text-align: center;
-    background: #FFF;
     color: #000;
     font-family: "Playfair Display";
     font-size: 16px;
