explore quickling jump

--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -23,8 +23,8 @@
         <div class="w3-col s6 m1 l1 w3-hide-small">&nbsp</div>
         <div class="w3-col s12 m4 l3">
             ©2024 Brightening the Covenant Chain<br/>
-            <a href="/accessibility/">Accessibility Statement</a><br/>
-            <a href="/credits/">Credits &amp; Acknowledgements</a>
+            <a href="{{ "/accessibility" | url }}">Accessibility Statement</a><br/>
+            <a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a>
         </div>
 
     </div>
