--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -12,7 +12,7 @@ layout: base.liquid
                 complex story than popular history has hitherto told about colonial settlement among - and the Crown's
                 relations with - the powerful indigenous nations of the Iroquois Confederacy.
                 <br/>
-                <div class="info-button"><a href="stories/">GO TO MAP</a></div>
+                <div class="info-button"><a href="{{ "stories/" | url }}">GO TO MAP</a></div>
             </div>
 
             <div class="content {{ tags }}">
@@ -20,29 +20,29 @@ layout: base.liquid
             </div>
         </div>
         <div class="w3-row has-text-centered w3-padding-small quicklink-container">
-             <div class="w3-col s3 m1 l1">&nbsp;</div>
+            <div class="w3-col s3 m1 l1">&nbsp;</div>
             <div class="w3-col s6 m3 l3 quicklink  quicklink-spacer">
                 <div class="quicklink-text">
                     Scroll through illustrated narratives which explain and expand on the historical contexts of the map
                     data.
 
                 </div>
-                <div class="info-button"><a href="stories/">Stories</a></div>
+                <div class="info-button"><a href="{{ "stories/" | url }}">Stories</a></div>
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
                     Select a historical map source and choose what features to display.
                 </div>
-                <div class="info-button"><a href="stories/#s6-end">Explore</a></div>
+                <div class="info-button"><a href="{{ "stories/#s6-end" | url }}">Explore</a></div>
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink">
                 <div class="quicklink-text">
-                    Find out more about the themes and topics of M&CW with links to related websites and suggestions for further reading.
-
+                    Find out more about the themes and topics of M&CW with links to related websites and suggestions for
+                    further reading.
                 </div>
-                <div class="info-button"><a href="resources/">Resources</a></div>
+                <div class="info-button"><a href="{{ "resources/" | url }}">Resources</a></div>
             </div>
 
         </div>
