home page css updates

--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -1,27 +1,28 @@
 <footer class="footer">
     <hr/>
-    <div class="w3-row has-text-centered w3-padding-small">
-        <div class="w3-col s12 m3 l2">
+    <div class="w3-row has-text-centered w3-padding-small flex-container">
+        <div class="">
             <h4>Partners and Funders</h4>
         </div>
-        <div class="w3-col s12 m3 l2 logo kcl-logo">
+        <div class="logo">
             <a href="//kdl.kcl.ac.uk/">
-                {% image "assets/img/logos/KCL.png", "King's College London logo", "(min-width: 5em), 5vw" %}
+                {% image "assets/img/logos/KCL.png", "King's College London logo", "(min-width: 10em), 10vw" %}
             </a>
         </div>
 
-        <div class="w3-col s12 m3 l2 logo w3-padding-">
+        <div class="logo">
             <a href="//treatiedspaces.com/">
                 {% image "assets/img/logos/treatied_spaces.png", "Treatied spaces", "300, 600" %}
             </a>
         </div>
-        <div class="w3-col s12 m3 l2 logo">
+        <!--w3-col s12 m3 l2 -->
+        <div class="logo">
             <a href="//www.ukri.org/about-us/ahrc/">
                 {% image "assets/img/logos/ahrc_2.png", "Treatied spaces", "(min-width: 10em), 30vw" %}
             </a>
         </div>
-        <div class="w3-col s6 m1 l1 w3-hide-small">&nbsp</div>
-        <div class="w3-col s12 m4 l3">
+
+        <div class="">
             ©2024 Brightening the Covenant Chain<br/>
             <a href="{{ "/accessibility" | url }}">Accessibility Statement</a><br/>
             <a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a>
