--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -19,15 +19,16 @@ layout: base.liquid
                 {{ content }}
             </div>
         </div>
-        <div class="w3-row has-text-centered w3-padding-small quicklink-container">
-            <div class="w3-col s3 m1 l1">&nbsp;</div>
-            <div class="w3-col s6 m3 l3 quicklink  quicklink-spacer">
-                <div class="quicklink-text">
-                    Scroll through illustrated narratives which explain and expand on the historical contexts of the map
-                    data.
+        <div class="w3-row has-text-centered w3-padding-small flex-container quicklink-container">
 
+            <div class="w3-col s6 m3 l3 quicklink quicklink-spacer">
+                <div class="quicklink-text">
+                    Scroll through illustrated narratives which explain and expand on the historical contexts of the
+                    map
+                    data.
                 </div>
                 <div class="info-button"><a href="{{ "stories/" | url }}">Stories</a></div>
+
             </div>
 
             <div class="w3-col s6 m3 l3 quicklink quicklink-spacer">
