--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -1,8 +1,17 @@
 // Extra stuff in applying Lucie's templates
 
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
 
 div.logo {
   padding-left: 1em;
+  max-width: 20%;
 }
 
 div.logo.kcl-logo img {
@@ -12,6 +21,8 @@ div.logo.kcl-logo img {
 div.logo img {
   width: 50%;
   height: auto;
+  display:block;
+  margin: auto;
 }
 
 .subtitle {
@@ -47,7 +58,8 @@ div.logo img {
 .quicklink {
   text-align: center;
   background: rgb(18,77,32, 0.1);
-  padding-bottom: 5%;
+  padding-bottom: 1%;
+  width: 20%;
   color: #000;
   font-family: "Playfair Display";
   font-size: 16px;
@@ -116,7 +128,9 @@ header {
 
 }
 div.home-container {
-
+ max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div.container {
