--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -114,9 +114,9 @@ div.quicklink .info-button {
 }
 
 // position: fixed;
+// margin-top: 5%;
 
 .footer {
-  margin-top: 5%;
   bottom: 1;
 }
 
@@ -193,6 +193,7 @@ div.footer-bottom div.develop {
     font-weight: 400;
     line-height: 180%; /* 28.8px */
     border-top: 5px solid #124D20;
+    padding-bottom: 2%;
   }
 
   .quicklink-text {
