--- a/frontend/_includes/footer.liquid
+++ b/frontend/_includes/footer.liquid
@@ -1,12 +1,12 @@
 <footer class="footer">
     <hr/>
     <div class="w3-row has-text-centered w3-padding-small flex-container">
-        <div class="">
+        <div class="logo">
             <h4>Partners and Funders</h4>
         </div>
-        <div class="logo">
+        <div class="logo kcl-logo">
             <a href="//kdl.kcl.ac.uk/">
-                {% image "assets/img/logos/KCL.png", "King's College London logo", "(min-width: 10em), 10vw" %}
+                {% image "assets/img/logos/KCL.png", "King's College London logo", "300, 600" %}
             </a>
         </div>
 
@@ -22,7 +22,7 @@
             </a>
         </div>
 
-        <div class="">
+        <div class="footer-credits">
             ©2024 Brightening the Covenant Chain<br/>
             <a href="{{ "/accessibility" | url }}">Accessibility Statement</a><br/>
             <a href="{{ "/acknowledgements" | url }}">Credits &amp; Acknowledgements</a>
