--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -11,7 +11,8 @@
 
 div.logo {
   padding-left: 1em;
-  max-width: 20%;
+  width: 15%;
+  text-align: center;
 }
 
 div.logo.kcl-logo img {
@@ -204,6 +205,24 @@ div.footer-bottom div.develop {
 
   .quicklink-spacer {
     margin-right: 3%;
+  }
+
+  div.logo {
+    width: 20%;
+  }
+
+  div.logo.kcl-logo img {
+  width: 80%;
+}
+
+div.logo img {
+  width: 80%;
+  height: auto;
+  display:block;
+  margin: auto;
+}
+  .footer-credits{
+    font-size: 80%;
   }
 }
 
