--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,8 @@
 
 div.logo {
   padding-left: 1em;
-  max-width: 20%;
+  width: 15%;
+  text-align: center;
 }
 
 div.logo.kcl-logo img {
@@ -184,6 +185,21 @@ div.footer-bottom div.develop {
   }
   .quicklink-spacer {
     margin-right: 3%;
+  }
+  div.logo {
+    width: 20%;
+  }
+  div.logo.kcl-logo img {
+    width: 80%;
+  }
+  div.logo img {
+    width: 80%;
+    height: auto;
+    display: block;
+    margin: auto;
+  }
+  .footer-credits {
+    font-size: 80%;
   }
 }
 @media only screen and (min-width: 1201px) {
