--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -72,7 +72,7 @@ div.logo img {
 
 .quicklink-text {
   padding: 10%;
-  max-height: 5vw;
+  height: 5vw;
 }
 
 .quicklink-spacer {
@@ -119,6 +119,7 @@ div.quicklink .info-button {
 
 .footer {
   bottom: 1;
+  margin-top: 5%;
 }
 
 .footer hr {
@@ -199,8 +200,8 @@ div.footer-bottom div.develop {
 
   .quicklink-text {
     padding: 10%;
-    min-height: 20vw;
-    max-height: 20vw;
+    height: 20vw;
+
   }
 
   .quicklink-spacer {
@@ -238,7 +239,7 @@ div.logo img {
 
   .quicklink-text {
     padding: 10%;
-    max-height: 5vw;
+    height: 10vw;
   }
 
   .quicklink-spacer {
