Update stories.liquid; removed Herbert, 1755 from map set and adjusted total num of maps; changed river feature to be sub_type 8 and Rivers

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -127,7 +127,7 @@ layout: base.liquid
             needed.</p>
 
         <section id="mapFilters">
-            <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/16 Selected</em></h3>
+            <header><h3>Maps <em><span id="totalMapFiltersApplied">0</span>/15 Selected</em></h3>
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
             </header>
@@ -166,12 +166,6 @@ layout: base.liquid
                            class="map_selector" id="mapcheckbox8"/>
                     <label for="mapcheckbox8">
                         <img src="../assets/img/map-thumbs/1752-Evans.jpg" alt=""><span>1752 <em>Evans</em></span>
-                    </label>
-                </li>
-                <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
-                           class="map_selector" id="mapcheckbox9"/>
-                    <label for="mapcheckbox9">
-                        <img src="../assets/img/map-thumbs/1755-Herbert.jpg" alt=""><span>1755 <em>Herbert</em></span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="11"
@@ -278,11 +272,11 @@ layout: base.liquid
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
-                           data-filtervalue='{"sub_type":13, "identity":[0]}'
+                           data-filtervalue='{"sub_type":8, "identity":[0]}'
                            class="explore_filter" id="checkbox5"/>
                     <label for="checkbox5">
                         <img
-                                src="https://static.thenounproject.com/png/2615726-200.png" alt=""/><span>Principal Rivers</span>
+                                src="https://static.thenounproject.com/png/2615726-200.png" alt=""/><span>Rivers</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
