Update home.liquid; changed a historical map source to historical map sources

--- a/frontend/_includes/home.liquid
+++ b/frontend/_includes/home.liquid
@@ -33,7 +33,7 @@ layout: base.liquid
 
             <div class="w3-col s6 m4 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
-                    Select a historical map source and choose what features to display.
+                    Select historical map sources and choose what features to display.
                 </div>
                 <div class="info-button"><a href="{{ "stories/#s6-end" | url }}">Explore</a></div>
             </div>
