New legend styling

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -304,6 +304,7 @@ layout: base.liquid
         <h2>Legend</h2>
     </label>
     <div class="content">
+		<!--
         <ol>
             <li>Placenames (Indigenous)</li>
             <li>Placenames (European)</li>
@@ -320,6 +321,16 @@ layout: base.liquid
             <li>Pathways and Lines</li>
             <li>Council Fires</li>
         </ol>
+		-->
+        <ul>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img>&nbsp;Placenames (Indigenous)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img>&nbsp;Placenames (European)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img>&nbsp;Settlements (Indigenous)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img>&nbsp;Settlements (European)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img>&nbsp;Principal Rivers</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img>&nbsp;Pathways and Lines</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img>&nbsp;Council Fires</li>
+        </ul>		
     </div>
 </div>
 
