More style corrections

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -323,12 +323,17 @@ layout: base.liquid
         </ol>
 		-->
         <ul>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img>&nbsp;Placenames (Indigenous)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img>&nbsp;Placenames (European)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img>&nbsp;Settlements (Indigenous)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img>&nbsp;Settlements (European)</li>
+            <li><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img>&nbsp;Indigenous region</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img>&nbsp;Haudenosaunee region</li>
+            <li><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img>&nbsp;Domain (European)</li>		
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img>&nbsp;Annotation (European)</li>			
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquosie.webp' | url }}"></img>&nbsp;Placenames (Indigenous)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img>&nbsp;Placenames (European)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img>&nbsp;Settlements (Indigenous)</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img>&nbsp;Settlements (European)</li>
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img>&nbsp;Principal Rivers</li>
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img>&nbsp;Pathways and Lines</li>
+            <li><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img>&nbsp;Boundary</li>			
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img>&nbsp;Council Fires</li>
         </ul>		
     </div>
