--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -322,6 +322,7 @@ layout: base.liquid
             <li>Council Fires</li>
         </ol>
 		-->
+<! --
         <ul>
             <li><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img>&nbsp;Indigenous region</li>
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img>&nbsp;Haudenosaunee region</li>
@@ -335,7 +336,52 @@ layout: base.liquid
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img>&nbsp;Pathways and Lines</li>
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img>&nbsp;Boundary</li>			
             <li><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img>&nbsp;Council Fires</li>
-        </ul>		
+        </ul>		-->
+
+<table>
+  <tr>
+    <td><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
+    <td>Indigenous region</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
+    <td>Haudenosaunee region</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
+    <td>Domain (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
+    <td>Annotation (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
+    <td>Placenames (Indigenous)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
+    <td>Placenames (European)</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
+    <td>Settlements (Indigenous)</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+
     </div>
 </div>
 
