--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -304,80 +304,55 @@ layout: base.liquid
         <h2>Legend</h2>
     </label>
     <div class="content">
-		<!--
-        <ol>
-            <li>Placenames (Indigenous)</li>
-            <li>Placenames (European)</li>
-            <li>Settlements (Indigenous)</li>
-            <li>Settlements (European)</li>
-            <li>Principal Rivers</li>
-            <li>Pathways and Lines</li>
-            <li>Council Fires</li>
-            <li>Placenames (Indigenous)</li>
-            <li>Placenames (European)</li>
-            <li>Settlements (Indigenous)</li>
-            <li>Settlements (European)</li>
-            <li>Principal Rivers</li>
-            <li>Pathways and Lines</li>
-            <li>Council Fires</li>
-        </ol>
-		-->
-<! --
-        <ul>
-            <li><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img>&nbsp;Indigenous region</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img>&nbsp;Haudenosaunee region</li>
-            <li><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img>&nbsp;Domain (European)</li>		
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img>&nbsp;Annotation (European)</li>			
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img>&nbsp;Placenames (Indigenous)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img>&nbsp;Placenames (European)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img>&nbsp;Settlements (Indigenous)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img>&nbsp;Settlements (European)</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img>&nbsp;Principal Rivers</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img>&nbsp;Pathways and Lines</li>
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img>&nbsp;Boundary</li>			
-            <li><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img>&nbsp;Council Fires</li>
-        </ul>		-->
 
 <table>
   <tr>
-    <td><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
-    <td>Indigenous region</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
+    <td>Settlement (Indigenous)</td>
   </tr>
   <tr>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
-    <td>Haudenosaunee region</td>
-  </tr>
-  <tr>
-    <td><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
-    <td>Domain (European)</td>
-  </tr>
-  <tr>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
-    <td>Annotation (European)</td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_purple.webp' | url }}"></img></td>
+    <td>Settlement (European)</td>
   </tr>
   <tr>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_turquoise.webp' | url }}"></img></td>
-    <td>Placenames (Indigenous)</td>
+    <td>Placename (Indigenous)</td>
   </tr>
   <tr>
     <td><img style="height: 1em;" src="{{ '/assets/img/stories/cross_purple.webp' | url }}"></img></td>
-    <td>Placenames (European)</td>
+    <td>Placename (European)</td>
   </tr>
   <tr>
-    <td><img style="height: 1em;" src="{{ '/assets/img/stories/circle_turquoise.webp' | url }}"></img></td>
-    <td>Settlements (Indigenous)</td>
+    <td><img style="height: 1em;opacity:0.3;" src="{{ '/assets/img/stories/region_turquoise.webp' | url }}"></img></td>
+    <td>Annotation (Indigenous-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp' | url }}"></img></td>
+    <td>Annotation (Haudenosaunee-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/diagonal_hatching_purple.webp' | url }}"></img></td>
+    <td>Annotation (European-related)</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td>
+    <td><img style="height: 1em;opacity:0.3" src="{{ '/assets/img/stories/region_purple.webp' | url }}"></img></td>
+    <td>Colonial domain</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/principal_rivers.webp' | url }}"></img></td>
+    <td>River</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/pathways.webp' | url }}"></img></td>
+    <td>Pathway</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/boundary.webp' | url }}"></img></td>
+    <td>Boundary</td>
+  </tr>
+  <tr>
+    <td><img style="height: 1em;" src="{{ '/assets/img/stories/council-fire.webp' | url }}"></img></td>
+    <td>Council fire</td>
   </tr>
 </table>
 
